# stocktracker

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerignore  entrypoint.sh  heroku.yml  pyproject.toml  requirements.txt
.github/workflows/: run_tests.yml
compose/local/django/: Dockerfile  start
compose/local/django/celery/beat/: start
stocktracker/: db.sqlite3  manage.py
stocktracker/stocks/: managers.py  models.py  serializers.py  tasks.py  tests.py  views.py
stocktracker/stocks/migrations/: 0001_initial.py  0002_stock_price.py  0003_remove_stock_close_remove_stock_date_and_more.py  0004_alter_stock_ticker.py
stocktracker/stocktracker/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
